# Josaa-Chatbot

./: .gitignore  LICENSE  README.md  pyproject.toml  rag.ipynb
text-parsing/: parser.py
text-parsing/data/: 2023-IIT-1.aspx  2023-IIT-2.aspx  2023-IIT-3.aspx  2023-IIT-4.aspx  2023-IIT-5.aspx  2024-IIT-1.aspx  2024-IIT-2.aspx  2024-IIT-3.aspx  2024-IIT-4.aspx  2024-IIT-5.aspx
