[project]
name = "josaa-chatbot"
version = "0.1.0"
description = "Simple RAG based chatbot based on past IIT seat allocation data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "ollama>=0.5.1",
]
